# imgprep

./: imgprep.sh  pyproject.toml
imgprep/: main.py  project.py  util.py
