[tool.poetry]
name = "imgprep"
version = "0.1.0"
description = "Data curation for generative image model training"
authors = ["Matthew McAllister <matthew.mcallister.0@gmail.com>"]
license = "GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pygobject = "^3.44.1"

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
